[package]
name = "RustWebApp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.0"
actix-rt = "2.9.0"
serde = { version = "1.0.195", features = ["derive"] }
polars = "0.36.0"
log = "0.4.20"
env_logger = "0.11.1"


